<resources>
    <string name="app_name">Ami</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Log in</string>
    <string name="signIn_btn">Create an account</string>
    <string name="login_google">Continue with Google</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="create_account_title">Create an account</string>
    <string name="education">Add your education</string>
    <string name="date">Date</string>
    <string name="institute">Institution</string>
    <string name="add">Add</string>
    <string name="next">Next</string>
    <string name="password__confirm_hint">Confirm password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Timeline</string>
    <string name="tab_text_2">Perfil</string>
    <string name="tab_text_3">Amigos</string>
    <string name="tab_text_4">Busqueda</string>
    <string name="tab_text_5">Notificaciones</string>
    <string name="confirm_request">Send a friend request to:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_post">New post</string>
    <string name="edit_account_title">Edit account</string>

</resources>
